website-analytics/css/public_analytics.css
/* ... */
ul.pills:last-child {
  margin-right: 0;
}
ul.pills li {
  width: 33.3333%;
}
ul.pills,
ul.pills > li {
  list-style: none;
  margin: 0;
  padding: 0;
  display: block;
}
ul.pills {
  margin: 0.6rem 0 1.5rem 0;
}
ul.pills > li {
  float: left;
}
ul.pills > li > a {
  color: #112e51;
  background: #fff;
  width: 100%;
  text-align: center;
  font-weight: 300;
  font-size: 0.8em;
  display: inline-block;
  padding: 0.32em 0em;
  text-decoration: none;
  border-top: 1px solid #e4e4e4;
  border-bottom: 1px solid #e4e4e4;
  border-right: 1px solid #e4e4e4;
}
ul.pills > li > a:hover {
  text-decoration: underline;
}
ul.pills > li > a:focus {
  margin-left: 2px;
  margin-right: 2px;
  width: calc(100% - 6px);
}
ul.pills > li > a[aria-selected="true"] {
  color: #fff;
  background: #0071bc;
}
ul.pills > li:last-child > a {
  border-right: none;
}

#top_100_table ul.pills li:first-child {
  display: none;
}

#top_100_table ul.pills li {
  width: 50%;
}

.bar-chart {
  margin: 1rem 0;
  position: relative;
  font-size: 90%;
  display: block;
}

.bar-chart .bar-chart {
  font-size: 80%;
}

.bar-chart .bar-chart .bin {
  margin-left: 2em;
  margin-bottom: 0rem;
}

.bar-chart .bar-chart .bin .bar {
  display: none;
}

.bar-chart .bin {
  position: relative;
  overflow: hidden;
  margin: 0 0 1rem 0;
}

.bar-chart .bin::after {
  clear: both;
  content: "";
  display: table;
}

.bar-chart .bin .bar:after {
  content: " ";
  display: block;
  position: absolute;
  background: #f9f9f9;
  top: 0;
  left: 100%;
  width: 1000px;
  height: 100%;
  z-index: 1;
}

.bar-chart .bar {
  height: 0.8rem;
  background: #0071bc;
  position: relative;
  z-index: 2;
  min-width: 1px;
  -webkit-transition: width 0.5s linear;
  -moz-transition: width 0.5s linear;
  transition: width 0.5s linear;
}

.bar-chart .label {
  white-space: nowrap;
  height: 2.2rem;
  margin-right: 4em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.bar-chart .label a {
  text-decoration: none;
}

.bar-chart .label a:hover {
  text-decoration: underline;
}

.bar-chart .label:focus-within {
  height: 4rem;
}

.bar-chart .label a:focus {
  display: inline-block;
  margin-inline: 7px;
  margin-block: 7px;
}

.bar-chart .value {
  text-align: right;
  height: 2rem;
  white-space: nowrap;
  margin-top: -2.2rem;
  margin-bottom: 0.45rem;
}

#top-downloads .bar-chart .label,
#top_external_links_table .bar-chart .label {
  height: auto;
  line-height: 1.6;
}
#top-downloads .bar-chart .label .name,
#top_external_links_table .bar-chart .label .name {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#top-downloads .bar-chart .label .domain,
#top_external_links_table .bar-chart .label .domain {
  color: #323a45;
  font-size: 0.8em;
}

g.axis path,
g.axis line {
  fill: none;
  stroke: none;
}
g.axis .tick text {
  fill: #323a45;
  font-size: 1.1rem;
}

.time-series rect {
  fill: #0071bc;
  stroke: #fff;
  stroke-width: 1;
}
.time-series text.label {
  fill: #323a45;
  font-size: 0.6rem;
}

#site-wide-alert {
  margin-top: 0;
}

figure figure h4 {
  display: none;
}
figure figure .bar-chart {
  margin: 0.5rem 0;
}
figure figure .bar-chart .bin {
  margin-bottom: 0.5rem;
}

*[data-block] {
  opacity: 1;
  -webkit-transition: opacity 0.3s ease-in 0.5s;
  -moz-transition: opacity 0.3s ease-in 0.5s;
  transition: opacity 0.3s ease-in 0.5s;
}
*[data-block].loading {
  opacity: 0.8;
}

.usa-skipnav {
  color: #1a4480;
}
.usa-skipnav:active,
.usa-skipnav:hover {
  color: #1a4480;
}

.usa-skipnav:visited {
  color: #4b4b4d;
}

.usa-sr-only {
  position: absolute;
  left: -999em;
}

.skip-to-main-content-link {
  font-size: 1.06em;
  line-height: 1.5;
  text-decoration: underline;
  background: 0 0;
  left: 0;
  padding: 0.5em 1em;
  position: absolute;
  top: -3.8em;
  transition: 0.15s ease-in-out;
  z-index: 100;
}
.skip-to-main-content-link:focus {
  background: #fff;
  left: 0;
  position: absolute;
  top: 0;
  transition: 0.15s ease-in-out;
  outline: 0.2em solid #0186a2;
  outline-offset: 0;
  box-shadow: 0 0 0 7px #0186a2;
}

.label .domain:focus-within {
  display: inline-block;
  height: 4rem;
}

